# events-aggregator

./: .gitignore  Dockerfile  README.md  database.py  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 08cd6f5f00b2_add_sync_metadata_table.py  1a679a5346e5_create_table.py  4a0ac801ed40_create_tickets.py  5291f8c2004b_create_tables.py  54070e6d52f1_create_table.py  829c38d58f96_create_tickets.py  86f9311d6378_create_table.py  89878c720d00_create_table.py  9a31e3565df5_create_table.py  a4fbb4e7ad03_create_tables.py  d0ab38707833_create_table.py  d4b6e20424ba_create_table.py  d9c655b55e9d_create_table.py  f0c997e55e35_create_table.py
app/: celery_app.py  celery_tasks.py  config.py  database.py  database_sync.py  main.py
app/application/: cancel_ticket.py  create_ticket.py  get_events.py  get_seats.py  sync_events.py
app/domain/: exceptions.py  models.py
app/infrastructure/: cache.py  capashino_client.py  db_schema.py  event_repository.py  events_paginator.py  events_provider_client.py  events_provider_client_sync.py  idempotency_repository.py  outbox_repository.py  sync_metadata_repository.py  ticket_repository.py
app/presentation/: api.py  outbox_worker.py  schemas.py  sync_worker.py
tests/: test_events_paginator.py
