[project]
name = "events-provider"
version = "0.1.0"
description = "Events Aggregator Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kombu==5.3.4",
    "amqp==5.2.0",
    "sqlalchemy[asyncio]==2.0.48",
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "sentry-sdk==2.55.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "psycopg2>=2.9.11",
    "celery[postgresql]==5.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]


[tool.ruff.lint]
select = ["I"]
extend-select = ["I"]

[tool.ruff.lint.isort]
# Явно указываем, что pytest - сторонняя библиотека
known-third-party = ["pytest", "pytest_asyncio", "pytest_mock"]
# Указываем секции в правильном порядке
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "first-party",
    "local-folder",
]
# Принудительно разделять секции
lines-between-types = 1
# Сортировать по алфавиту внутри секций
force-sort-within-sections = true
# Не объединять импорты в одну строку
force-single-line = false
