[project]
name = "events-provider"
version = "0.1.0"
description = "Events Aggregator Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # База данных
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    # API
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    # Мониторинг
    "sentry-sdk>=2.55.0",
    # Celery с PostgreSQL брокером
    "celery>=5.3.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff.lint]
select = ["I"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-third-party = ["pytest", "pytest_asyncio", "pytest_mock"]
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "first-party",
    "local-folder",
]
lines-between-types = 1
force-sort-within-sections = true
force-single-line = false
